--- a/templates/issues.html
+++ b/templates/issues.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GitHub Bounty Issues</title>
+    <title>Bounty Issues</title>
 </head>
 <body>
-    <h1>Bounty Issues for Repository: {{ repo_name }}</h1>
+    <h1>Bounty Issues for {{ repo_name }}</h1>
     <ul>
         {% for issue in issues %}
-        <li>
-            <a href="{{ issue.html_url }}" target="_blank">{{ issue.title }}</a>
-        </li>
+            <li><a href="{{ url_for('view_issue', repo_name=repo_name, issue_number=issue.number) }}">{{ issue.title }}</a></li>
         {% endfor %}
     </ul>
-    <a href="{{ url_for('index') }}">Back to Home</a>
 </body>
 </html>
