--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>GitHub Repository Bounty Tracker</h1>
-    <p>Enter the name of the GitHub repository you want to track:</p>
+    <p>Enter the name of the GitHub repository with bounties:</p>
     
-    <form method="POST" action="/">
+    <form method="POST" action="/welcome">
         <label for="repo_name">Repository Name:</label>
         <input type="text" id="repo_name" name="repo_name" required>
         <br><br>
