--- a/templates/index.html
+++ b/templates/index.html
@@ -13,5 +13,10 @@
         <br><br>
         <input type="submit" value="Track Bounty">
     </form>
+    {% if error_message %}
+    <div class="error">
+        <p>{{ error_message }}</p>
+    </div>
+    {% endif %}
 </body>
 </html>
